# spot

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: attractions.py  base.py  budget.py  enrichment.py  hotel.py  prompt.py  report_writer.py  restaurant.py  transport.py  writer.py
backend/app/api/: exports.py  health.py  runs.py
backend/app/db/: mongo.py  schemas.py
backend/app/graph/: graph.py  prompts.py  state.py  timeout.py
backend/app/graph/nodes/: aggregate_results.py  parse.py  quality_split.py
backend/app/schemas/: spot_on.py
backend/app/services/: export.py  llm.py  tavily.py
backend/app/utils/: dedup.py  sse.py  time_windows.py
backend/tests/: conftest.py  test_aggregate.py  test_api.py  test_base_agent.py  test_constraints.py  test_dedup.py  test_health.py  test_mongo_validation.py  test_normalize_helpers.py  test_parse_node.py  test_quality_split.py  test_settings_adapter.py  test_sse.py
docs/: TECHNICAL_DOC.md
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/runs/[runId]/cancel/: route.ts
frontend/app/api/runs/[runId]/events/: route.ts
frontend/app/runs/[runId]/cancel/: route.ts
frontend/app/runs/[runId]/export/pdf/: route.ts
frontend/components/: ReferenceTabs.tsx  ResultsView.tsx
frontend/components/ui/: Combobox.tsx  DatePicker.tsx
frontend/lib/: api.ts  fakeData.ts  proxy.ts  sse.ts
frontend/types/: api.ts
(+3 files in other folders)
