[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "Backend for Travel Planner (FastAPI + LangGraph + MongoDB + Tavily + OpenAI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "motor>=3.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "langgraph>=0.2.0",
  "tavily-python>=0.5.0",
  "langchain-openai>=0.3.0",
  "langchain-core>=0.3.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "reportlab>=4.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

